# mcp-cn-a-stock

./: .gitignore  ARCHITECTURE.md  MIGRATION.md  README.md  SECTOR_STOCKS_FIX_REPORT.md  SECTOR_STOCKS_USAGE.md  SSE_USAGE.md  data.py  debug_market_cap.py  debug_real_market_cap.py  list_available_sectors.py  main.py  pyproject.toml  requirements.txt  start.sh  start_sse.sh  test_akshare_direct.py  test_date.py  test_full.py  test_improved_sector_stocks.py  test_medium_function.py  test_minute_data.py  test_original_issue.py  test_sector.py  test_sector_stocks.py  test_symbols.py  test_tcap_fix.py
confs/: markets.json  stock_sector.json
docs/: let-your-deepseek-analyze-stock-by-mcp.md
qtf_mcp/: __init__.py  datafeed.py  mcp_app.py  research.py  symbols.py
tests/: test.sh
